Added more UI elements for the calculator page

--- a/WhelpWizard/WhelpWizard.csproj
+++ b/WhelpWizard/WhelpWizard.csproj
@@ -51,6 +51,8 @@
     <Compile Include="ListOfDams.xaml.cs">
       <DependentUpon>ListOfDams.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CalculateDate.cs" />
+    <Compile Include="PregnancyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
