--- a/WhelpWizard/WhelpWizard.csproj
+++ b/WhelpWizard/WhelpWizard.csproj
@@ -36,6 +36,9 @@
     <EmbeddedResource Include="ListOfDams.xaml">
       <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
     </EmbeddedResource>
+    <EmbeddedResource Include="DamInformation.xaml">
+      <Generator>MSBuild:UpdateDesignTimeXaml</Generator>
+    </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App.xaml.cs">
@@ -55,6 +58,9 @@
     <Compile Include="PregnancyInfo.cs" />
     <Compile Include="Dog.cs" />
     <Compile Include="SaveAndLoad.cs" />
+    <Compile Include="DamInformation.xaml.cs">
+      <DependentUpon>DamInformation.xaml</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
