Can get index from menu item now. Also added a variable in the dog class that keeps track of the place in the list it's in.

--- a/WhelpWizard/WhelpWizard.csproj
+++ b/WhelpWizard/WhelpWizard.csproj
@@ -61,6 +61,7 @@
     <Compile Include="DamInformation.xaml.cs">
       <DependentUpon>DamInformation.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Counter.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="Xamarin.Forms.Core">
