--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -52,6 +52,7 @@
   <package id="System.Xml.ReaderWriter" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Xml.XDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="Xam.Plugins.Notifier" version="2.1.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
