--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -6,6 +6,8 @@
   <package id="NETStandard.Library" version="1.6.1" targetFramework="monoandroid60" />
   <package id="Newtonsoft.Json" version="10.0.3" targetFramework="monoandroid60" />
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid60" />
+  <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
+  <package id="Plugin.Share" version="5.0.0" targetFramework="monoandroid60" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
@@ -23,7 +25,7 @@
   <package id="System.IO.FileSystem.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Linq" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Linq.Expressions" version="4.3.0" targetFramework="monoandroid60" />
-  <package id="System.Net.Http" version="4.3.0" targetFramework="monoandroid60" />
+  <package id="System.Net.Http" version="4.3.2" targetFramework="monoandroid60" />
   <package id="System.Net.Primitives" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Net.Sockets" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.ObjectModel" version="4.3.0" targetFramework="monoandroid60" />
@@ -54,6 +56,7 @@
   <package id="System.Xml.XmlDocument" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Xam.Plugins.Notifier" version="2.1.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Animated.Vector.Drawable" version="23.3.0" targetFramework="monoandroid60" />
+  <package id="Xamarin.Android.Support.CustomTabs" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.Design" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v4" version="23.3.0" targetFramework="monoandroid60" />
   <package id="Xamarin.Android.Support.v7.AppCompat" version="23.3.0" targetFramework="monoandroid60" />
