--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -8,6 +8,7 @@
   <package id="PCLStorage" version="1.0.2" targetFramework="monoandroid60" />
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.Share" version="5.0.0" targetFramework="monoandroid60" />
+  <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid60" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
