--- a/Droid/packages.config
+++ b/Droid/packages.config
@@ -1,5 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Acr.Support" version="2.1.0" targetFramework="monoandroid60" />
+  <package id="Acr.UserDialogs" version="6.2.0" targetFramework="monoandroid60" />
+  <package id="AndHUD" version="1.2.0" targetFramework="monoandroid60" />
   <package id="Microsoft.CSharp" version="4.3.0" targetFramework="monoandroid60" />
   <package id="Microsoft.NETCore.Platforms" version="1.1.0" targetFramework="monoandroid60" />
   <package id="Microsoft.Win32.Primitives" version="4.3.0" targetFramework="monoandroid60" />
@@ -9,6 +12,7 @@
   <package id="Plugin.CurrentActivity" version="1.0.1" targetFramework="monoandroid60" />
   <package id="Plugin.Share" version="5.0.0" targetFramework="monoandroid60" />
   <package id="Rg.Plugins.Popup" version="1.0.4" targetFramework="monoandroid60" />
+  <package id="Splat" version="1.6.2" targetFramework="monoandroid60" />
   <package id="System.AppContext" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections" version="4.3.0" targetFramework="monoandroid60" />
   <package id="System.Collections.Concurrent" version="4.3.0" targetFramework="monoandroid60" />
